# riscv-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup-github.sh
examples/: hello.asm
include/: bus.h  constants.h  cpu.h  device.h  elf_loader.h  memory.h  types.h  uart.h
src/: bus.cpp  cpu.cpp  device.cpp  main.cpp  memory.cpp
tests/: test_basic.cpp
